# crypto-quant-agents

./: .env.example  .gitignore  README.md  pyproject.toml  quant_project_memory.txt
doc/: CONTRADICTION_POLICY_SPEC_AND_BENCHMARK_DELTA.md  COST_STRESS_TEST_REPORT_AND_THRESHOLD_UPDATES.md  LIVE_READINESS_RUNBOOK.md  MODEL_METRIC_DEFINITIONS_AND_RESULTS.md  NEXT_STEPS_BUILD_ROADMAP.md  PHASE1_PLAN.md  PHASE1_PLAN_existing.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE4_PLAN.md  PRIORITY1_ABLATION_MATRIX_REPORT.md  PROFITABILITY_IMPROVEMENT_IDEAS.md  PROFITABILITY_OPTIMIZATION_FLOW.md  PROFITABILITY_RESULTS_SUMMARY.md  REGIME_BENCHMARK_BASELINE.json  REGIME_BENCHMARK_PASS_FAIL_CRITERIA.md  REGIME_CONTRIBUTION_VS_ABLATION_ANALYSIS.md  REGIME_DETECTION_PLAN.md  REGIME_V2_DESIGN_NOTE.md  RISK_BUDGET_POLICY.md  TRIGGER_LABELING_OBJECTIVE_SPEC.md  audit-fixes.md  progress.md
scripts/: backfill_ohlcv_history.py  backfill_trigger_history.py  evaluate_agent_regime_windows.py  path_a_live_reporter.py  ranked_feature_ablation_plan.json  ranked_feature_ablation_plan_high_corr.json  ranked_feature_ablation_plan_single_feature_interaction_v1.json  ranked_feature_ablation_plan_single_feature_interaction_v2_aggressive_params.json  ranked_feature_ablation_plan_single_feature_interaction_v3_zero_friction.json  ranked_feature_ablation_plan_single_feature_interaction_v3_zero_friction_targeted.json  ranked_feature_ablation_plan_single_feature_interaction_v4_directional_stress.json  ranked_feature_ablation_plan_single_feature_interaction_v5_extreme_actionability.json  regime_window_slices.json  (+14 more)
(+35 files in other folders)
